# DwellVerdict

./: .gitignore  CLAUDE.md  DATA_STRATEGY_V22.md  README.md  TECHNICAL_SPEC.md  journal.txt  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.claude/: settings.local.json
.github/workflows/: ci.yml
apps/modeling/: .dockerignore  .env.example  Dockerfile  README.md  fly.toml  pyproject.toml  ruff.toml
apps/modeling/dwellverdict_modeling/: main.py
apps/modeling/tests/: test_health.py
apps/web/: .env.example  instrumentation-client.ts  instrumentation.ts  middleware.ts  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/app/: global-error.tsx  globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/components/: address-autocomplete.tsx  app-nav.tsx  (+9 more)
docs/: DECISIONS.md  DESIGN.md
docs/RUNBOOKS/: sprint-2-verdict-generation.md
docs/refactor/: PROMPT_00_ENGINEERING_SETUP.md  PROMPT_01_FOUNDATION.md  PROMPT_02_ONBOARDING_SCHEMA.md  REFACTOR_MASTER_PLAN.md  RUNBOOK.md
infra/: fly.modeling.toml  neon-setup.md
prompts/: ltr-comps-lookup.v1.md  market-velocity-lookup.v1.md  place-sentiment.v1.md  regulatory-lookup-flipping.v1.md  regulatory-lookup-house-hacking.v1.md  regulatory-lookup-ltr.v1.md  regulatory-lookup-owner-occupied.v1.md  regulatory-lookup-str.v1.md  regulatory-lookup.v1.md  sales-comps-lookup.v1.md  schools-lookup.v1.md  scout-chat.v1.md  str-comps-lookup.v1.md  verdict-generation.v1.md  verdict-narrative.v1.md  verdict-narrative.v2.md  verdict-narrative.v3.md
(+165 files in other folders)
